--- a/styles/main.css
+++ b/styles/main.css
@@ -140,6 +140,7 @@ body {
 @media (max-width: 640px) {
   .wrapper {
     flex-direction: column;
+    flex-wrap: nowrap;
   }
 
   .mobile-hide {
