--- a/styles/score-announcement.css
+++ b/styles/score-announcement.css
@@ -18,6 +18,7 @@
   .score-announcement-flex-column {
     width: auto;
     height: auto;
+    flex-direction: column;
   }
 }
 
